Create README.md Hide credentials

--- a/src/main/resources/jdbcTemplate/hsql.properties
+++ b/src/main/resources/jdbcTemplate/hsql.properties
@@ -1,7 +1,7 @@
 base.driver=org.hsqldb.jdbcDriver
 base.url=jdbc:hsqldb:mem:hsql
-base.user=root
-base.password=root
+base.user=
+base.password=
 
 
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
