--- a/src/main/resources/jdbcTemplate/postgre.properties
+++ b/src/main/resources/jdbcTemplate/postgre.properties
@@ -1,7 +1,7 @@
 base.driver=org.postgresql.Driver
-base.url=jdbc:postgresql://localhost:5432/postgres
-base.user=user
-base.password=password
+base.url=jdbc:postgresql://localhost:5432/DBname
+base.user=
+base.password=
 
 
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
